# titan

./: .clang-tidy  .gitignore  CDR.md  CMakeLists.txt  CmakeLists.txt  README.md  build.sh  cmsis.h  communication_protocol.txt  exc.h  tmp.h  todo
.github/workflows/: build-check.yml
apps/: CMakeLists.txt
apps/domecracker/: CMakeLists.txt  linker.ld
apps/domecracker/src/: config.c
cmake/config/: default_build_config.json
cmake/util/: config_parser.cmake
common/cmake/: config_parser.cmake
dev/: CMakeLists.txt  alloc.h  cfg.txt  def.h  def.inc  file_template.h  hammingcode.py  limits.h  limits.inc  rules.txt
dev/arm_gcc_toolchain/13.3 rel1/arm-none-eabi/include/c++/13.3.1/: utility
dev/code/: atomic.h  dma.h  hsem.h  nvic.c  ref.h  reg.h  reg3.h  startup.c  svd.h  sys_util.h  tmp.h  util.h
dev/code/rtos/: exec.h  thread.c
dev/code/test/: devboard_startup.S  main.c
dev/code/tmp/: bit.h  compat.h  core.h  link.ld  mem.h  num.h  ovf.h  startup.c
dev/code/util/: bit.h  mem.h  misc.h  num.h
dev/dev_config/: ti_config.h
dev/devboard/: flash_config.cfg  linker_file.ld
dev/docs/: style.txt  todo.md
dev/old/cmake/: CMakeLists3.txt  arm-gnu-toolchain.cmake
dev/old_files/arch_armv7m/: fault.c  fault.h
dev/old_files/include/: int.h  mem.c  mem_num.h  numeric.h  numeric_2.h  numeric_3.h  numeric_5.h  numeric_6.h  numeric_7.h  stdlib.h
dev/platform/: watchdog.h
dev/resource/: STM32H745_CM7.svd  arm_gnu_toolchain.cmake  file_template.h  toolchain.cmake
dev/resources/: project_info.md
dev/resources/templates/: header_template.txt  inline_doc_template.txt
dev/saved/: clk.h  gpio.c  nvic.h  pwr.h  thread.c  thread.h
dev/src/dev/: main.c
dev/stm32h745_cm7/: alloc.c  bit.c
dev/stm32h745_cm7/bit/: bit_inspect.c  bit_mask.c
dev/stm32h745_cm7/float/: fp_classify.c  fp_impl.h  fp_inspect.c  fp_value.c
dev/tmp_code/: nvic.h  old_mmio.h  systick.h
dev/wip/: attr.h  math.h  mem.h  pin.h  str.h
dev/wip/platform/: gpio.h
doc/: cpp_info.md  file_template.h  project_guidelines.md  project_info.md  todo.md
doc/internal/: file_template.h
doc/template/: cpp_guard.h  doc_template.txt  header_template.txt  section_template.txt
docs/: rules.txt
include/tal/: assert.h  attributes.h  bit.h  core.h  env_info.h  error.c  error.h  error_orig.h  float.h  imath.h  internal.h  logging.h  mask.h  math.h  mem.h  numeric.h  spi.h  str.h  tmp.h
include/ti/: lib_config.h  task.h  thread.h
include/titan/: CAN.h  fmc.h  gpio.h  i2c.h  usart.h
modules/: CMakeLists.txt  README.md
modules/app/include/app/: data_telemetry.h  mem_loc.h
modules/app/src/: data_telemetry.c  mem_loc.c
modules/apps/include/apps/: data_telemetry.h  sensor_data.h
modules/apps/src/: data_telemetry.c  sensor_data.c
modules/common/: CMakeLists.txt
modules/common/include/common/: errc.h
modules/device/include/device/: radio.h
modules/devices/include/devices/: gnss.h  radio.h  temp_sensor.h
modules/inputs/: readme.txt
modules/inputs/include/inputs/: gnss.h  temp_sensor.h
modules/inputs/src/: gnss.c  temp_sensor.c
modules/internal/: CMakeLists.txt
modules/internal/include/internal/: interrupt.h  mmio.h
modules/internal/src/: mmio.c
modules/kernel/: CMakeLists.txt
modules/kernel/include/kernel/: alloc.h  critlock.h  error.h  event.h  flag.h  future.h  host.h  mutex.h  queue.h  semaphore.h  sys.h  thread.h  time.h
modules/kernel/src/: critlock.c  host.c  internal_util.h  kernel_util.h  mutex.c  startup.c  sys.c  thread.c
modules/mcu/: CMakeLists.txt
modules/mcu/include/mcu/: dma.h  exti.h  hrtim.h  i2c.h  mmio.h  rtc.h  spi.h
modules/mcu/include/src/: i2c.c
modules/mcu/src/: dma.c  exti.c  hrtim.c  spi.c
modules/outputs/include/outputs/: fan.h  radio.h
modules/outputs/src/: fan.c  radio.c
modules/periphs/: CMakeLists.txt
modules/periphs/include/periphs/: gpio.h  spi.h
modules/util/: CMakeLists.txt
modules/util/include/util/: atomic.h  attributes.h  core.h  debug.h  errc.h  host.h  macro.h  mask.h  math.h
modules/util/src/: atomic.c  debug.c  errc.c  host.c  math.c
port/STM32H745/: CMakeLists.txt  port.cmake
port/STM32H745/linker_scripts/: gnu_link.ld
port/STM32H745/src/: block_device.h  clock.h  fat.c  fat.h  gpio.c  onboard_clock.c  rtc.c  rtc.h  sdmmc.c  sdmmc.h  usb.c
port/STM32H745/src/STM32H745/: CAN.c  fmc.c  gpio.c  tmp_config.h  usart.c
port/STM32H745/src/STM32H745/internal/: dma.h  interrupt.h  mmio.h  nvic.h  startup.c  vtable.c
port/STM32H745/src/STM32H745/resource/: interrupt.h  mmio.h  vtable.c
port/STM32H745/src/STM32H745/subsys/: cfunc.h  ex_exec.h  exec_util.h  hsem.h  shared_mem.h  startup.c
port/STM32H745/src/internal/: dma.h  mmio.h
port/STM32H745/tests/: Makefile  demo  demo.c  demo.md  demo.norg  demo_runner  test_runner.sh  test_suite  tests.c
src/: main.c
src/STM32H745_CM7/: TMP_config.h  config.h  device_config.h  interrupt.h  mmio.h  nvic.h  reset.c  shared_mem.h  startup.c  sys_util.h  thread.c
src/STM32H7x5/: device.h  exc.h  gpio.c  link.ld  startup.h  util.h
src/app/: data_collector.h  data_logger.h  data_telemetry.h  error_handler.h  launch_sequence.h  main.c  peripheral_config.c  state.h  state_machine.c  system_manager.c  system_manager.h
src/boot/: system_init.h
src/common/: attr.h  attributes.h  env_info.h  errc.h  tmp.h
src/devices/: actuator.c  actuator.h  adc.c  adc.h  barometer.c  barometer.h  gnss.c  gnss.h  imu.h  magnetometer.h  radio.c  radio.h  temp_sensor.h  temperature.c  temperature.h
src/internal/: alloc.c  alloc.h  interrupt.h  mmio.c  mmio.h  startup.c
src/peripheral/: dma.c  dma.h  errc.c  errc.h  flash.c  flash.h  gpio.c  gpio.h  log.c  log.h  pwm.c  pwm.h  qspi.c  qspi.h  spi.c  spi.h  uart.c  uart.h  watchdog.c  watchdog.h
src/platform/: clk.h  dma.c  dma.h  gpio.h  i2c.h  mdma.h  mmio.h  nvm.h  pwm.h  (+8 more)
test/: CMakeLists.txt  host_util.h  log_stub.c  main.c  startup.h  test_alloc.c  test_errc.c  test_pwm.c  test_spi.c  test_usart.c
test/src/test/: main.c
tests/: CMakeLists.txt  linker.ld
tests/gpio/: CMakeLists.txt
tools/: decode_errc_log.py
(+146 files in other folders)
